feature: add from first reference to resourceID too